k8s-practise/k8s/2-apps/backend/consumer-data-sync-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-data-sync
  namespace: production
  labels:
    app: consumer
    task: data-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
      task: data-sync
  template:
    metadata:
      labels:
        app: consumer
        task: data-sync
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: consumer
          image: khoanguyen2610/backend-consumer:latest
          args:
            - "--task=data-sync"
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
