k8s-practise/k8s/2-apps/backend/consumer-email-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-email-processor
  namespace: production
  labels:
    app: consumer
    task: email-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
      task: email-processor
  template:
    metadata:
      labels:
        app: consumer
        task: email-processor
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: consumer
          image: khoanguyen2610/backend-consumer:latest
          args:
            - "--task=email-processor"
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
