k8s-practise/k8s/2-apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1/$3
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: local-api.kn-tech.click
      http:
        paths:
          - path: /(v[0-9]+)(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8080
